--- a/biblioteca_web/templates/index.html
+++ b/biblioteca_web/templates/index.html
@@ -1,58 +1,29 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca Central</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <!--<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}" />-->
-</head>
+{% block title %}Inicio - Biblioteca Central{% endblock %}
 
-<body>
+{% block content %}
+<div>
+    <h2 align="center">Libros:</h2>
     <div>
-        <header>
-            <h1>Biblioteca Central</h1>
-        </header>
+        <table border="1" cellspacing="10">
+            <tr>
+                <th>Título</th>
+                <th>Autor</th>
+                <th>ISBN</th>
+                <th>Disponible</th>
+            </tr>
+
+            {% for libro in libros %}
+            <tr>
+                <td class="listalibros">{{ libro.titulo }}</td>
+                <td class="listalibros">{{ libro.autor }}</td>
+                <td class="listalibros">{{ libro.isbn }}</td>
+                <td class="listalibros">{{ "Disponible" if libro.disponible else "No disponible" }}</td>
+            </tr>
+            {% endfor %}
+
+        </table>
     </div>
-
-    <div>
-        <h2>Libros:</h2>
-        <div>
-            <table border="1">
-                <tr>
-                    <th>Título</th>
-                    <th>Autor</th>
-                    <th>ISBN</th>
-                    <th>Disponible</th>
-                </tr>
-
-                {% for libro in libros %}
-                <tr>
-                    <td>{{ libro.titulo }}</td>
-                    <td>{{ libro.autor }}</td>
-                    <td>{{ libro.isbn }}</td>
-                    <td>{{ libro.disponible }}</td>
-                </tr>
-                {% endfor %}
-
-            </table>
-        </div>
-    </div>
-
-
-
-    <!-- <main>
-
-
-        <h2>Menú</h2>
-    </main> -->
-
-</body>
-<!--
-<footer>
-    <p>© 2025 Biblioteca creada por Sergio Rodríguez Geniz. Todos los derechos reservados.</p>
-</footer>
--->
-
-</html>
+</div>
+{% endblock %}
