Completado el proyecto de biblioteca.

--- a/biblioteca_web/static/css/styles.css
+++ b/biblioteca_web/static/css/styles.css
@@ -62,6 +62,7 @@ table {
 
 .listalibros {
     text-align: center;
+    color: whitesmoke;
     /*border: 1px solid black;*/
     height: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.01);
