--- a/biblioteca_web/templates/index.html
+++ b/biblioteca_web/templates/index.html
@@ -8,10 +8,10 @@
     <div>
         <table border="1" cellspacing="10">
             <tr>
-                <th>Título</th>
-                <th>Autor</th>
-                <th>ISBN</th>
-                <th>Disponible</th>
+                <th style="color: black;">Título</th>
+                <th style="color: black;">Autor</th>
+                <th style="color: black;">ISBN</th>
+                <th style="color: black;">Disponible</th>
             </tr>
 
             {% for libro in libros %}
