--- a/biblioteca_web/templates/base_prestar_devolver.html
+++ b/biblioteca_web/templates/base_prestar_devolver.html
@@ -46,7 +46,7 @@
                 </label>
 
                 <input type="text" id="isbn" name="isbn" placeholder="Ej: 123456789" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; 
-                        border-radius: 6px; box-sizing: border-box; font-size: 16px;" value="{{ isbn }}">
+                        border-radius: 6px; box-sizing: border-box; font-size: 16px;" autofocus value="{{ isbn }}">
 
                 <button type="submit" formaction="/prestar_libro" style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
                         border: none; border-radius: 6px; font-size: 16px; cursor: pointer; font-weight: bold;">
