--- a/biblioteca_web/templates/index.html
+++ b/biblioteca_web/templates/index.html
@@ -4,8 +4,10 @@
 
 {% block content %}
 <div>
+    {% if libros %}
     <h2 align="center">Libros:</h2>
     <div>
+
         <table border="1" cellspacing="10">
             <tr>
                 <th style="color: black;">Título</th>
@@ -25,5 +27,12 @@
 
         </table>
     </div>
+    {% else %}
+    <div style="max-width: 600px; margin: 0 auto; background: white; padding: 30px; border-radius: 15px; box-shadow: 0
+        8px 32px rgba(0, 0, 0, 0.1);">
+        <p style="margin: 0; font-weight: bold; text-align: center; color: #667eea;">No hay libros en la biblioteca.
+        </p>
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
