--- a/biblioteca_web/templates/base_prestar_devolver.html
+++ b/biblioteca_web/templates/base_prestar_devolver.html
@@ -48,14 +48,18 @@
                 <input type="text" id="isbn" name="isbn" placeholder="Ej: 123456789" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; 
                         border-radius: 6px; box-sizing: border-box; font-size: 16px;" autofocus value="{{ isbn }}">
 
-                <button type="submit" formaction="/prestar_libro" style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
+                <button type="submit" formaction="/prestar_libro" class="b_sol_pres">
+                    <span>Solicitar prestamo</span>
+                </button>
+                <!--<button type="submit" formaction="/prestar_libro" style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
                         border: none; border-radius: 6px; font-size: 16px; cursor: pointer; font-weight: bold;">
                     Solicitar prestamo
-                </button>
-                <button type="submit" formaction="/devolver_libro"
-                    style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
-                        border: none; border-radius: 6px; font-size: 16px; cursor: pointer; font-weight: bold; margin-top: 10px;">
-                    Solicitar devolución
+                </button>-->
+
+                <button type="submit" formaction="/devolver_libro" class="b_sol_pres">
+                    <!--<button type="submit" formaction="/devolver_libro" style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
+                        border: none; border-radius: 6px; font-size: 16px; cursor: pointer; font-weight: bold; margin-top: 10px;">-->
+                    <span>Solicitar devolución</span>
                 </button>
             </form>
 
