Espcaiado los botones de solicitud y prestamo

--- a/biblioteca_web/templates/base_prestar_devolver.html
+++ b/biblioteca_web/templates/base_prestar_devolver.html
@@ -48,7 +48,7 @@
                 <input type="text" id="isbn" name="isbn" placeholder="Ej: 123456789" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; 
                         border-radius: 6px; box-sizing: border-box; font-size: 16px;" autofocus value="{{ isbn }}">
 
-                <button type="submit" formaction="/prestar_libro" class="b_sol_pres">
+                <button type="submit" formaction="/prestar_libro" style="margin: 15px;" class="b_sol_pres">
                     <span>Solicitar prestamo</span>
                 </button>
                 <!--<button type="submit" formaction="/prestar_libro" style="width: 100%; padding: 12px; background-color: #007bff; color: white; 
